trunk/Archive2/7a/5aa1c563726646/output
main.cpp:6:5: error: static_assert failed "..."
    static_assert(std::is_same<T, int>::value, "...");
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:11:5: note: in instantiation of function template specialization 'force_stack<double>' requested here
    force_stack<decltype(c)>();    
    ^
1 error generated.
